--- a/.github/workflows/node.yml
+++ b/.github/workflows/node.yml
@@ -17,7 +17,7 @@ jobs:
     strategy:
       matrix:
         os-version: [ubuntu-latest]
-        node-version: [10.x, 12.x, 14.x]
+        node-version: [12.x, 14.x]
 
     steps:
       - uses: actions/checkout@v2
@@ -33,8 +33,8 @@ jobs:
 
     strategy:
       matrix:
-        node-version: [10.x, 12.x, 14.x]
-        node-image-version: [10-alpine, 12-alpine, 14-alpine]
+        node-version: [12.x, 14.x]
+        node-image-version: [12-alpine, 14-alpine]
 
     steps:
       - uses: actions/checkout@v2
